--- a/Source/RimworldFavourites/RimworldFavourites.csproj
+++ b/Source/RimworldFavourites/RimworldFavourites.csproj
@@ -5,11 +5,25 @@
     <LangVersion>preview</LangVersion>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <ErrorReport>none</ErrorReport>
+    <ErrorReport>send</ErrorReport>
     <BaseOutputPath>C:\Users\danie\Documents\GitHub\RimworldFavourites\1.3\Assemblies</BaseOutputPath>
     <BaseIntermediateOutputPath />
     <DebugType>none</DebugType>
     <Configurations>Debug;Release;generic</Configurations>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <Optimize>True</Optimize>
+    <Deterministic>True</Deterministic>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='generic|AnyCPU'">
+    <Optimize>False</Optimize>
+    <Deterministic>True</Deterministic>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <Deterministic>True</Deterministic>
   </PropertyGroup>
 
   <ItemGroup>
