--- a/Source/RimworldFavourites/RimworldFavourites.csproj
+++ b/Source/RimworldFavourites/RimworldFavourites.csproj
@@ -10,6 +10,8 @@
     <BaseIntermediateOutputPath />
     <DebugType>none</DebugType>
     <Configurations>Debug;Release;generic</Configurations>
+    <FileVersion>1.0.1.3</FileVersion>
+    <AssemblyVersion>1.0.1.3</AssemblyVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
