--- a/Source/RimworldFavourites/RimworldFavourites.csproj
+++ b/Source/RimworldFavourites/RimworldFavourites.csproj
@@ -9,9 +9,10 @@
     <BaseOutputPath>C:\Users\danie\Documents\GitHub\RimworldFavourites\1.3\Assemblies</BaseOutputPath>
     <BaseIntermediateOutputPath />
     <DebugType>none</DebugType>
-    <Configurations>Debug;Release;generic</Configurations>
-    <FileVersion>1.1.1.3</FileVersion>
-    <AssemblyVersion>1.1.1.3</AssemblyVersion>
+    <!-- <Configurations>Debug;Release</Configurations> -->
+    <FileVersion>1.2.1.3</FileVersion>
+    <AssemblyVersion>1.2.1.3</AssemblyVersion>
+    <OutputType>Library</OutputType>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -30,21 +31,21 @@
 
   <ItemGroup>
     <Reference Include="0Harmony">
-      <HintPath>D:\Program Files (x86)\Steam\steamapps\workshop\content\294100\2009463077\Current\Assemblies\0Harmony.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\workshop\content\294100\2009463077\Current\Assemblies\0Harmony.dll</HintPath>
       <CopyLocal>False</CopyLocal>
     </Reference>
     <Reference Include="Assembly-CSharp">
-      <HintPath>D:\Program Files (x86)\Steam\steamapps\common\RimWorld\RimWorldWin64_Data\Managed\Assembly-CSharp.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\RimWorld\RimWorldWin64_Data\Managed\Assembly-CSharp.dll</HintPath>
       <CopyLocal>False</CopyLocal>
     </Reference>
     <Reference Include="System.Net.Http" />
     <Reference Include="UnityEngine.CoreModule">
-      <HintPath>D:\Program Files (x86)\Steam\steamapps\common\RimWorld\RimWorldWin64_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\RimWorld\RimWorldWin64_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
       <CopyLocal>False</CopyLocal>
     </Reference>
     <Reference Include="UnityEngine.IMGUIModule">
-      <HintPath>D:\Program Files (x86)\Steam\steamapps\common\RimWorld\RimWorldWin64_Data\Managed\UnityEngine.IMGUIModule.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\RimWorld\RimWorldWin64_Data\Managed\UnityEngine.IMGUIModule.dll</HintPath>
+      <CopyLocal>False</CopyLocal>
     </Reference>
   </ItemGroup>
 
